--- a/style.css
+++ b/style.css
@@ -62,6 +62,9 @@ header .linkedin-link {
     .header-info {
         text-align: center;
     }
+    nav ul li {
+        margin: 0 0.5rem;
+    }
 }
 
 
@@ -79,7 +82,7 @@ nav ul {
 }
 
 nav ul li {
-    margin: 0 1rem;
+    margin: 0 3rem;
 }
 
 nav ul li .tab-button {
@@ -158,4 +161,34 @@ footer {
   .certification-item a:hover {
     text-decoration: underline;
   }
-  
+  @media (max-width: 768px) {
+    nav ul {
+        flex-direction: column; /* Stack items vertically on smaller screens */
+        align-items: center; /* Center-align items */
+    }
+
+    nav ul li {
+        margin: 0rem 0; /* Reduce margin for vertical layout */
+    }
+
+    nav ul li .tab-button {
+        font-size: 1rem; /* Slightly larger buttons for easier tapping */
+        padding: 0.8rem 1rem; /* Increase padding for better tap areas */
+    }
+
+    /* Optionally, for a hamburger menu, you can add the following style */
+    .hamburger-menu {
+        display: block; /* Show hamburger menu on mobile */
+        cursor: pointer;
+        background: none;
+        border: none;
+        color: #fff;
+        font-size: 1.5rem;
+    }
+
+    nav ul.hamburger-active {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+}
